--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-spotify-web-playback-sdk": "^3.0.2",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
